# biopass

./: .gitattributes  .gitignore  Makefile  README.md
.github/workflows/: release.yaml
app/: biome.json  package.json  vite.config.ts
app/src/: main.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/scripts/: download_models.sh
app/src-tauri/scripts/deb/: postinst  prerm
app/src-tauri/scripts/rpm/: postinst  postrm  prerm
app/src-tauri/src/: config.rs  face.rs  fingerprint.rs  fingerprint_ffi.rs  lib.rs  pam.rs  paths.rs  system.rs
app/src/app/: __root.tsx  models.tsx  page.tsx
app/src/app/-components/: ModelStatus.tsx
app/src/app/configuration/: page.tsx
app/src/app/configuration/-components/: FingerprintSetting.tsx  MethodCard.tsx  MethodConfig.tsx  StrategyConfig.tsx  VoiceSetting.tsx  validation.ts
app/src/app/configuration/-components/face/: FaceCapture.tsx  FaceSetting.tsx
app/src/app/configuration/-components/methods/shared/: ModelSelect.tsx  Threshold.tsx
app/src/app/configuration/-stores/: configuration-store.ts
app/src/commands/: config.ts  core.ts  face.ts  file.ts  fingerprint.ts  index.ts  system.ts  voice.ts
app/src/components/config/: ConfigPage.tsx  MethodsSection.tsx  StrategySection.tsx
app/src/components/config/methods/shared/: ModelSelectField.tsx
app/src/components/models/: ModelCard.tsx  ModelsPage.tsx
app/src/types/: config.ts
auth/: CMakeLists.txt  Dependencies.cmake
auth/core/: CMakeLists.txt  auth_config.cc  auth_config.h  auth_manager.cc  auth_manager.h  auth_method.h
auth/face/: CMakeLists.txt  face_auth.cc  face_auth.h  image_utils.h
auth/face/antispoofing/: CMakeLists.txt  antispoof_check.cc  antispoof_check.h  face_as.cc  face_as.h  ir_camera_as.cc  ir_camera_as.h
auth/face/common/: camera_capture.cc  camera_capture.h  debug_image_io.cc  debug_image_io.h
auth/face/detection/: CMakeLists.txt  face_detection.cc  face_detection.h  utils.cc  utils.h
auth/face/models/: edgeface_s_gamma_05.onnx  edgeface_xs_gamma_06.onnx  mobilenetv3_antispoof.onnx  yolov8n-face.onnx
auth/face/recognition/: CMakeLists.txt  face_recognition.cc  face_recognition.h
auth/fingerprint/: CMakeLists.txt  fingerprint_auth.cc  fingerprint_auth.h  fingerprint_ffi.cc  fingerprint_ffi.h
auth/pam/: CMakeLists.txt  README.md  helper.cc  identify.cc  identify.h  pam.cc
auth/test/camera/: CMakeLists.txt  main.cpp
auth/test/face_engine/: CMakeLists.txt  README.md  main.cpp  run.sh
auth/voice/: CMakeLists.txt  voice_auth.cc  voice_auth.h
docs/: IR camera.md  PAM.md  contributing.md
